# ufsc-journal-crawler

./: Makefile  README.md  analysis.py  journal_content_crawler.py  journal_content_row.py  journal_crawler.py  journal_row.py  main.py  pyproject.toml  row_converter.py
