[tool.poetry]
name = "journal-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "journal_crawler"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pylint = "^3.0.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
